Improves zooming, fixes viewport on iOS

--- a/src/css/components.css
+++ b/src/css/components.css
@@ -9,11 +9,11 @@ body {
   left: 0;
   top: 0;
   right: 0;
-  bottom: 0;
+  height: 100vh;
 }
 
 #root {
-  height: 150vh;
+  height: 200vh;
   overflow: hidden;
   opacity: 0.5;
 }
